manifests/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 2

  selector:
    matchLabels:
      app: django

  template:
    metadata:
      labels:
        app: django

    spec:
      containers:
        - name: django
          image: duvindune/backend:latest

          ports:
            - containerPort: 8000

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

          startupProbe:
            httpGet:
              path: /api/v1/back_start/
              port: 8000
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 60

          readinessProbe:
            httpGet:
              path: /api/v1/back_ready/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/v1/back_live/
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
