manifests/back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
spec:
  type: ClusterIP  
  selector:
    app: django
  ports:
    - port: 8000
      targetPort: 8000
