manifests/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-svc
spec:
  type: NodePort
  selector:
    app: react
  ports:
    - port: 80
      targetPort: 80
